crates/bevy_ecs_compile_fail_tests/tests/ui/query_mut_iterator_impl_safety.stderr
error[E0277]: the trait bound `&mut A: ReadOnlyWorldQuery` is not satisfied
  --> tests/ui/query_mut_iterator_impl_safety.rs:9:17
   |
9  |     is_iterator(iter);
   |     ----------- ^^^^ the trait `ReadOnlyWorldQuery` is not implemented for `&mut A`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `ReadOnlyWorldQuery`:
             &T
             ()
             (F0, F1)
             (F0, F1, F2)
             (F0, F1, F2, F3)
             (F0, F1, F2, F3, F4)
             (F0, F1, F2, F3, F4, F5)
             (F0, F1, F2, F3, F4, F5, F6)
           and 49 others
   = note: `ReadOnlyWorldQuery` is implemented for `&A`, but not for `&mut A`
   = note: required because of the requirements on the impl of `Iterator` for `QueryCombinationIter<'_, '_, &mut A, (), {_: usize}>`
note: required by a bound in `is_iterator`
  --> tests/ui/query_mut_iterator_impl_safety.rs:20:28
   |
20 | fn is_iterator(_iter: impl Iterator) {}
   |                            ^^^^^^^^ required by this bound in `is_iterator`

error[E0277]: the trait bound `&mut A: ReadOnlyWorldQuery` is not satisfied
  --> tests/ui/query_mut_iterator_impl_safety.rs:13:17
   |
13 |     is_iterator(iter);
   |     ----------- ^^^^ the trait `ReadOnlyWorldQuery` is not implemented for `&mut A`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `ReadOnlyWorldQuery`:
             &T
             ()
             (F0, F1)
             (F0, F1, F2)
             (F0, F1, F2, F3)
             (F0, F1, F2, F3, F4)
             (F0, F1, F2, F3, F4, F5)
             (F0, F1, F2, F3, F4, F5, F6)
           and 49 others
   = note: `ReadOnlyWorldQuery` is implemented for `&A`, but not for `&mut A`
   = note: required because of the requirements on the impl of `Iterator` for `QueryManyIter<'_, '_, &mut A, (), std::array::IntoIter<bevy_ecs::entity::Entity, 1_usize>>`
note: required by a bound in `is_iterator`
  --> tests/ui/query_mut_iterator_impl_safety.rs:20:28
   |
20 | fn is_iterator(_iter: impl Iterator) {}
   |                            ^^^^^^^^ required by this bound in `is_iterator`

error[E0277]: the trait bound `&mut A: ReadOnlyWorldQuery` is not satisfied
  --> tests/ui/query_mut_iterator_impl_safety.rs:17:17
   |
17 |     is_iterator(iter);
   |     ----------- ^^^^ the trait `ReadOnlyWorldQuery` is not implemented for `&mut A`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `ReadOnlyWorldQuery`:
             &T
             ()
             (F0, F1)
             (F0, F1, F2)
             (F0, F1, F2, F3)
             (F0, F1, F2, F3, F4)
             (F0, F1, F2, F3, F4, F5)
             (F0, F1, F2, F3, F4, F5, F6)
           and 49 others
   = note: `ReadOnlyWorldQuery` is implemented for `&A`, but not for `&mut A`
   = note: required because of the requirements on the impl of `Iterator` for `QueryJoinMapIter<'_, '_, &mut A, (), std::array::IntoIter<bevy_ecs::entity::Entity, 1_usize>, [closure@$DIR/tests/ui/query_mut_iterator_impl_safety.rs:15:46: 15:52]>`
note: required by a bound in `is_iterator`
  --> tests/ui/query_mut_iterator_impl_safety.rs:20:28
   |
20 | fn is_iterator(_iter: impl Iterator) {}
   |                            ^^^^^^^^ required by this bound in `is_iterator`
